Remove '(opens in a new tab)' from Resume button

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
     <img src="images/about-me.jpg" alt="Tanaka Shumba Profile" />
     <h1>Tanaka Shumba</h1>
     <p>Welcome to my portfolio where I showcase projects in cybersecurity, coding, and technology. Here you will find selected work that reflects my skills and passion for solving technical challenges.</p>
-    <a href="resume.pdf" class="btn" target="_blank">View My Resume (opens in new tab)</a>
+    <a href="resume.pdf" class="btn" target="_blank">View My Resume</a>
   </header>
 
   <section class="about">
