--- a/index.html
+++ b/index.html
@@ -3,14 +3,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Tanaka Shumba - Cybersecurity professional portfolio showcasing projects, skills, and contact information.">
   <title>Tanaka Shumba | Cybersecurity Portfolio</title>
   <style>
     body {
       margin: 0;
       font-family: Arial, sans-serif;
       background: black;
-      color: white;
+      color: #39ff14;
       overflow-x: hidden;
     }
     header {
@@ -29,7 +28,6 @@
     header h1 {
       font-size: 3rem;
       margin: 10px 0;
-      color: #39ff14;
     }
     header p {
       font-size: 1.2rem;
@@ -83,20 +81,15 @@
       font-size: 1.3rem;
       color: #39ff14;
     }
-    .card p {
+    .card p, .card .tech {
       font-size: 0.95rem;
       color: white;
-    }
-    .card .tech {
-      font-size: 0.85rem;
-      margin-top: 10px;
-      color: #39ff14;
     }
     .fade-in {
       opacity: 1 !important;
       transform: translateY(0) !important;
     }
-    .about, .contact, .skills {
+    .about, .contact {
       max-width: 800px;
       margin: 0 auto;
       color: white;
@@ -116,7 +109,6 @@
     .socials a:hover {
       color: white;
     }
-    /* Particle canvas */
     #particles-js {
       position: fixed;
       top: 0;
@@ -124,11 +116,6 @@
       width: 100%;
       height: 100%;
       z-index: 0;
-    }
-    @media (max-width: 600px) {
-      header h1 { font-size: 2.2rem; }
-      h2 { font-size: 1.8rem; }
-      header p, .about p, .contact p { font-size: 1rem; }
     }
   </style>
 </head>
@@ -139,20 +126,13 @@
   <header>
     <img src="images/about-me.jpg" alt="Tanaka Shumba Profile" />
     <h1>Tanaka Shumba</h1>
-    <p>Welcome to my portfolio where I showcase projects in cybersecurity, coding, and technology. Here you will find selected work that reflects my skills and passion for solving technical challenges.</p>
-    <a href="resume.pdf" class="btn" target="_blank">View My Resume</a>
+    <p>Welcome to my portfolio where I showcase my projects in cybersecurity, coding, and technology. Here you will find selected work that reflects my skills and passion for solving technical challenges.</p>
+    <a href="resume.pdf" class="btn">View My Resume</a>
   </header>
 
   <section class="about">
     <h2>About Me</h2>
-    <p>I am a Cybersecurity professional with a B.S. in Cybersecurity and a strong background in threat detection, incident response, and penetration testing.</p>
-    <p>I enjoy building secure systems, solving real-world problems, and applying technical expertise to keep information safe.</p>
-    <p>My goal is to continuously grow as a security consultant while contributing to innovative projects in IT and security.</p>
-  </section>
-
-  <section class="skills">
-    <h2>Skills & Tech Stack</h2>
-    <p>Python, Bash, Wireshark, Nmap, Metasploit, Splunk, AWS, Linux, Penetration Testing, IDS/IPS, Malware Analysis, Networking</p>
+    <p>I am a Cybersecurity professional with a B.S. in Cybersecurity and a strong background in threat detection, incident response, and penetration testing. I enjoy building secure systems, solving real-world problems, and applying technical expertise to keep information safe. My goal is to continuously grow as a security consultant while contributing to innovative projects in the field of IT and security.</p>
   </section>
 
   <section>
@@ -184,27 +164,26 @@
       }
     });
 
-    // Static array containing all 19 projects from original GitHub API fetch
     const projects = [
-      { name: "Project A", description: "Description for Project A", tech: "Python, Bash", url: "#" },
-      { name: "Project B", description: "Description for Project B", tech: "Python, Linux", url: "#" },
-      { name: "Project C", description: "Description for Project C", tech: "Python, Flask", url: "#" },
-      { name: "Project D", description: "Description for Project D", tech: "Python, Scikit-learn", url: "#" },
-      { name: "Project E", description: "Description for Project E", tech: "Linux, Bash", url: "#" },
-      { name: "Project F", description: "Description for Project F", tech: "Python, Nmap", url: "#" },
-      { name: "Project G", description: "Description for Project G", tech: "Python, Wireshark", url: "#" },
-      { name: "Project H", description: "Description for Project H", tech: "Splunk, Python", url: "#" },
-      { name: "Project I", description: "Description for Project I", tech: "AWS, Linux", url: "#" },
-      { name: "Project J", description: "Description for Project J", tech: "Python, Bash", url: "#" },
-      { name: "Project K", description: "Description for Project K", tech: "Python, Flask", url: "#" },
-      { name: "Project L", description: "Description for Project L", tech: "Python, Scikit-learn", url: "#" },
-      { name: "Project M", description: "Description for Project M", tech: "Linux, Bash", url: "#" },
-      { name: "Project N", description: "Description for Project N", tech: "Python, Nmap", url: "#" },
-      { name: "Project O", description: "Description for Project O", tech: "Python, Wireshark", url: "#" },
-      { name: "Project P", description: "Description for Project P", tech: "Splunk, Python", url: "#" },
-      { name: "Project Q", description: "Description for Project Q", tech: "AWS, Linux", url: "#" },
-      { name: "Project R", description: "Description for Project R", tech: "Python, Bash", url: "#" },
-      { name: "Project S", description: "Description for Project S", tech: "Python, Flask", url: "#" }
+      {"name":"automated-vulnerability-scanner","description":"A safe, educational demo that parses mock Nmap-style JSON scan results and maps services/ports to a small sample CVE database. Demonstrates how an automated vulnerability scanner could parse network scan data and identify potential vulnerabilities.","tech":"Python","url":"https://github.com/TanakaShumba/automated-vulnerability-scanner"},
+      {"name":"basic-pen-test","description":"Simple Python script for educational penetration testing and vulnerability scanning.","tech":"Python","url":"https://github.com/TanakaShumba/basic-pen-test"},
+      {"name":"cloud-misconfig-scanner","description":"A tool to scan cloud environments for common misconfigurations that could lead to security vulnerabilities.","tech":"Python","url":"https://github.com/TanakaShumba/cloud-misconfig-scanner"},
+      {"name":"cloud-security-checker","description":"Python script to simulate checking cloud service configurations for common security misconfigurations.","tech":"Python","url":"https://github.com/TanakaShumba/cloud-security-checker"},
+      {"name":"cybersecurity-lab-series","description":"Educational scripts for network scanning and VoIP traffic analysis.","tech":"Python","url":"https://github.com/TanakaShumba/cybersecurity-lab-series"},
+      {"name":"ethical-hacking-sim","description":"Python scripts simulating ethical hacking techniques for learning and demonstration purposes.","tech":"Python","url":"https://github.com/TanakaShumba/ethical-hacking-sim"},
+      {"name":"Healthcare_System","description":"A simple healthcare management system built with Flask. Manages appointments, doctors, and payments with CRUD operations.","tech":"HTML, Flask","url":"https://github.com/TanakaShumba/Healthcare_System"},
+      {"name":"malware-analyzer","description":"Python script to simulate analyzing suspicious files and detecting potential malicious behaviors in a controlled environment.","tech":"Python","url":"https://github.com/TanakaShumba/malware-analyzer"},
+      {"name":"nmap-threat-model","description":"A comprehensive threat model for Nmap, identifying potential security risks and mitigation strategies.","tech":"Python","url":"https://github.com/TanakaShumba/nmap-threat-model"},
+      {"name":"password-security-demo","description":"A demonstration of best practices for password security, including hashing and salting techniques.","tech":"Python","url":"https://github.com/TanakaShumba/password-security-demo"},
+      {"name":"phishing-email-detector","description":"An AI-based tool to detect phishing emails and protect users from malicious attacks.","tech":"Python","url":"https://github.com/TanakaShumba/phishing-email-detector"},
+      {"name":"python-network-scanner","description":"Python project for network scanning.","tech":"Python","url":"https://github.com/TanakaShumba/python-network-scanner"},
+      {"name":"secure-hospital-system","description":"Python-based secure hospital management system.","tech":"Python","url":"https://github.com/TanakaShumba/secure-hospital-system"},
+      {"name":"security-awareness-mini-course","description":"An introductory course designed to enhance security awareness among users and organizations.","tech":"HTML","url":"https://github.com/TanakaShumba/security-awareness-mini-course"},
+      {"name":"siem-log-parser","description":"A parser to analyze and interpret logs from Security Information and Event Management systems.","tech":"Python","url":"https://github.com/TanakaShumba/siem-log-parser"},
+      {"name":"simple-ids","description":"A basic IDS/IPS simulation in Python.","tech":"Python","url":"https://github.com/TanakaShumba/simple-ids"},
+      {"name":"soc-alert-triage","description":"A system for triaging Security Operations Center alerts to prioritize and respond to incidents effectively.","tech":"Python","url":"https://github.com/TanakaShumba/soc-alert-triage"},
+      {"name":"voip-traffic-analyzer","description":"Python project that captures and analyzes VoIP RTP packets on a local network. Prints sequence number, timestamp, and payload type for each RTP packet. Safe for educational use.","tech":"Python","url":"https://github.com/TanakaShumba/voip-traffic-analyzer"},
+      {"name":"windows-event-log-analyzer","description":"A utility to analyze Windows event logs for suspicious activities and potential security threats.","tech":"Python","url":"https://github.com/TanakaShumba/windows-event-log-analyzer"}
     ];
 
     const container = document.getElementById("projects");
